CHANGE: Core | Network IP_TOS option now sets required registry setting under Win2K/XP [Parg, Nolar]
CHANGE: Core | Favor establishing inbound peer connections, to increase the health of swarms with firewalled clients [Nolar]
CHANGE: Core | Improved seeding unchoking algorithm: distributes data more evenly [Nolar]

BUGFIX: Core | IPFilters loaded from static config file weren't working [Parg]
BUGFIX: Core | Fix re-announce interval bug when zero peers in swarm [Nolar]
BUGFIX: UI   | Corrected save dialog behaviour on Make Torrent Wizard regarding file selection [CrazyAlchemist]
BUGFIX: UI   | Bug #953619 concerning Mac OS X: Double-clicking .torrent files now activate Azureus with the expected Finder dialogs (Dragging files to the Dock icon will continue to malfunction for the indefinite future) [CrazyAlchemist]
BUGFIX: UI   | Bug #1120995: Improper validation could allow unreasonably low global upload cap [CrazyAlchemist]
BUGFIX: UI   | Main window no longer tries to steal focus on opening (Mac OS X) [CrazyAlchemist]
BUGFIX: UI   | Pop up messages no longer try to steal focus (Mac OS X) [CrazyAlchemist]
BUGFIX: UI   | Resolved fuzzy dock icon display under Mac OS X if Column Setup is opened [CrazyAlchemist]
BUGFIX: UI   | Upload caps for individual transfers now display more sensible values if global upload cap is set to unlimited [CrazyAlchemist]
BUGFIX: UI   | In My Torrents, a category view will no longer prevent its corresponding table view's horizontal scrolling [CrazyAlchemist]
BUGFIX: UI   | Download bars should no longer disappear when the main window is minimized (Mac OS X) [CrazyAlchemist]
BUGFIX: UI   | Certain table column contents no longer 'disappear' when a row is selected (Mac OS X) [CrazyAlchemist]
BUGFIX: Core | Send uninterested message when complete while using do-not-download feature [Nolar]
BUGFIX: Core | Optimistic Connect, when seeding, no longer drops just random connections [Nolar]




2004.12.18 | Azureus 2.2.0.2
